--- a/app/RideShareOZ/app/src/main/AndroidManifest.xml
+++ b/app/RideShareOZ/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MyRidesActivity"
+            android:label="@string/title_my_rides"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.swen900014.orange.rideshareoz.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
