--- a/server/RideShare-OZ-Server/package.json
+++ b/server/RideShare-OZ-Server/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "date-and-time": "^0.1.8",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "request": "~2.61.0",
     "mongodb": "*",
+    "mongoose": "*",
     "monk": "*",
-    "mongoose": "*"
+    "morgan": "~1.6.1",
+    "request": "~2.61.0",
+    "serve-favicon": "~2.3.0"
   }
 }
