gps track function

--- a/app/RideShareOZ/app/src/main/AndroidManifest.xml
+++ b/app/RideShareOZ/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
 
     <!-- To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user's Google account from an app. -->
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
@@ -63,6 +66,11 @@
             android:name=".UserInfoActivity"
             android:label="@string/title_activity_user_info" >
         </activity>
+        <service
+            android:name=".GPSTracker"
+            android:value=".com.swen900014.orange.rideshareoz.GPSTracker"
+            android:enabled="true" >
+    </service>
     </application>
 
 </manifest>
