--- a/server/RideShare-OZ-Server/package.json
+++ b/server/RideShare-OZ-Server/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.6.1",
     "request": "~2.61.0",
     "serve-favicon": "~2.3.0",
-    "google-distance-matrix": "*"
+    "google-distance-matrix": "*",
+    "node-schedule": "*"
   }
 }
