--- a/app/RideShareOZ/app/src/main/AndroidManifest.xml
+++ b/app/RideShareOZ/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +39,8 @@
         </activity>
         <activity
             android:name=".OfferRide"
-            android:label="@string/_offerRide" >
+            android:label="@string/_offerRide"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swen900014.orange.rideshareoz.MainActivity" />
@@ -50,7 +52,8 @@
         <activity
             android:name=".MyRidesActivity"
             android:label="@string/title_ride_searchresults"
-            android:parentActivityName=".OfferRide" >
+            android:parentActivityName=".OfferRide"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swen900014.orange.rideshareoz.MainActivity" />
