--- a/app/RideShareOZ/app/src/main/AndroidManifest.xml
+++ b/app/RideShareOZ/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         <activity
             android:name=".MyRidesActivity"
             android:label="@string/title_ride_searchresults"
-            android:parentActivityName=".OfferRide"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
