--- a/server/RideShare-OZ-Server/package.json
+++ b/server/RideShare-OZ-Server/package.json
@@ -11,6 +11,7 @@
     "date-and-time": "^0.1.8",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "*",
     "jade": "~1.11.0",
     "mongodb": "*",
     "mongoose": "*",
