--- a/server/RideShare-OZ-Server/bower.json
+++ b/server/RideShare-OZ-Server/bower.json
@@ -26,6 +26,7 @@
         "angular-bootstrap": "~0.11.0",
         "angular-ui-router": "^0.2.10",
         "angular-xeditable": "~0.1.8",
+        "angular-utils-pagination": "*",
         "bootstrap": "~3.2.0",
         "font-awesome": "~4.1.0"
     },
