Added underline to the text.

--- a/app/RideShareOZ/app/src/main/AndroidManifest.xml
+++ b/app/RideShareOZ/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
         </activity>
         <service
             android:name=".utils.GPSTracker"
-            android:value=".com.swen900014.orange.rideshareoz.GPSTracker"
+            android:value=".com.swen900014.orange.rideshareoz.utils.GPSTracker"
             android:enabled="true" >
         </service>
     </application>
